--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,25 @@
 </head>
 <body>
 
+
+<%= link_to "Home", root_path %>
+
+<% if current_user %>
+
+
+
+	<%= link_to "Logout", sessions_path, method: :delete %> 
+<% else %>
+
+	<%= link_to "Signup", new_user_path %>
+
+	<span>or</span>
+
+	<%= link_to "Login", login_path %>
+
+<% end %>
+
+
 <%= yield %>
 
 </body>
