--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,4 +6,6 @@ You are from: <%= @user.city %><br>
 
 <%= @user.created_at %><br>
 
-<%= link_to "logout", sessions_path, method: :delete %>
+<%= link_to "Update Info", edit_user_path(@user) %> <br>
+
+
