--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,8 +1,10 @@
 
+<%= link_to "Home", root_path %>
+
 <% if current_user %>
 
-
-
+	
+	<%= link_to "Profile", user_path(current_user) %> 
 	<%= link_to "Logout", sessions_path, method: :delete %> 
 <% else %>
 
