--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,11 @@
-<h1>Welcome Page</h1>
+<!DOCTYPE html>
 
-Test
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<h1>Welcome Page</h1>
+	Test
+</body>
+</html>
