CRUD on articles

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,4 @@
-<h1> New Article page </h1>
-
-
+<br></h1> Edit Artcile Page </h1>
 
 <%= form_for @article do |form| %>
   
@@ -17,5 +15,5 @@
     <%= form.text_field :country, placeholder: "Country" %> <br>
 
 
-  <%= form.submit "Create!" %>
+  <%= form.submit "Update Article!" %>
 <% end %> 
