--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,15 @@
-<h1>Articles#show</h1>
+<h1>Specific Article Page</h1>
 
 <%= @article.title %><br>
 
 <%= @article.city %><br>
 <%= @article.content %><br>
 <%= @author %><br>
+
+<%= link_to "Edit this Article", edit_article_path(@article) %><br>
+
+
+<%= link_to "Delete this Article v2", delete_article_path(@article), method: :delete %><br>
 
 <%= link_to "Back to Profile", user_path(current_user) %>
 
