--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,8 @@ You are from: <%= @user.city %><br>
     <li><%= link_to article.title, article %></li>
     <li><%= article.city %></li>
     <li><%= article.content %></li>
+    <%= link_to "Edit this Article", edit_article_path(article.id) %><br>
+	<%= link_to "Delete this Article v2", delete_article_path(article.id), method: :delete %><br>
     <br>
   <% end %>
 <br>
