--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,10 +1,14 @@
-<nav class="navbar navbar-custom navbar-fixed-top">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#home">Boat Page</a>
-    </div>
-    <div>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Logout", sessions_path, method: :delete %></li> 
-      </ul>
-    </div>
-</nav>
+<% if current_user %>
+
+
+
+    <%= link_to "Logout", sessions_path, method: :delete %> 
+<% else %>
+
+    <%= link_to "Signup", new_user_path %>
+
+    <span>or</span>
+
+    <%= link_to "Login", login_path %>
+
+<% end %>
