got articles and cities talking

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -6,7 +6,7 @@
   
  	<%= form.text_field :title, placeholder: "Title", class: "form-control" %><br>
 
-    <%= form.text_field :city, placeholder: "City" %> <br>
+	<%= select(:article, :city_id, [['San Francisco', 1], ['London', 2], ['Gibraltar', 3]]) %><br>
 
     <%= form.text_field :content, placeholder: "Say What!!" %> <br>
 
