--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
 
-<html>
-<head>
-	<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-</head>
-<body>
-	<h1></h1>
-</body>
-</html>
-<%= render 'partials/nav' %>
+<h1>This is our Home page</h1>
+<br>
+<%= link_to "San Francisco", city_path(1) %><br>
+<%= link_to "London", city_path(2) %><br>
+<%= link_to "Gibraltar", city_path(3) %><br>
+
