--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,33 +2,16 @@
 <html>
 <head>
   <title>Vagabond</title>
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-
-<%= link_to "Home", root_path %>
-
-<% if current_user %>
-
-
-
-	<%= link_to "Logout", sessions_path, method: :delete %> 
-<% else %>
-
-	<%= link_to "Signup", new_user_path %>
-
-	<span>or</span>
-
-	<%= link_to "Login", login_path %>
-
-<% end %>
-
+   	<%= render 'partials/nav' %>
 
 <%= yield %>
-<%= console %> 
 
 </body>
 </html>
