--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,14 +1,20 @@
-<% if current_user %>
 
 
+<nav class="navbar navbar-default navbar-inverse">
+    <div>
+      <ul class="nav navbar-nav navbar-left">
+      	<% if current_user %>
 
-    <%= link_to "Logout", sessions_path, method: :delete %> 
-<% else %>
+      	    <%= link_to "Logout", sessions_path, method: :delete %> 
+      	<% else %>
 
-    <%= link_to "Signup", new_user_path %>
+      	    <%= link_to "Signup", new_user_path, { :class=>"signup_link" } %>
 
-    <span>or</span>
+      	    <span>                </span>
 
-    <%= link_to "Login", login_path %>
+      	    <%= link_to "Login", login_path, { :class=>"login_link" } %>
 
-<% end %>
+      	<% end %>
+      </ul>
+    </div>
+</nav>
