--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Vagabond</title>
+  <link rel="shortcut icon" href="http://images.clipartpanda.com/no-money-sign-clip-art-money-sign.png">
   <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -11,7 +12,7 @@
 
    	<%= render 'partials/nav' %>
 
-<%= yield %>
+	<%= yield %>
 
 </body>
 </html>
