--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -1,5 +1,5 @@
 body {
-	background: url('https://images.unsplash.com/9/bob-van-aubel-ray-bans.jpg?q=80&fm=jpg&s=3c8e975b7a2e7b92bff336e5ca954491') no-repeat center center fixed; 
+	background: url('http://hdwallpapers.cat/wallpaper/solar_system_sci-fi_concept_space_craft_ufo_hd-wallpaper-598413.jpg') no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -39,6 +39,17 @@ body {
 	margin-top: 1%;
 	margin-bottom: 1%;
 	margin-left: 14.5%;
+	color: white;
+	width: 15%;
+}
+
+.articles2 {
+	padding: 1%;
+	background-color: rgba(0,0,0,0.6);
+	border-radius: 10px;
+	margin-top: 1%;
+	margin-bottom: 1%;
+	margin-left: 5.5%;
 	color: white;
 	width: 15%;
 }
