--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -4,7 +4,7 @@
       	<%= link_to "Home", root_path %>
       	<% if current_user %>
 
-      	    <%= link_to "Logout", sessions_path, method: :delete %> 
+      	    <%= link_to "Logout", sessions_path, {method: :delete}, { :class=>"signup_link" } %> 
       	    <%= link_to "Profile", user_path(current_user) %> 
       	<% else %>
       	    <%= link_to "Signup", new_user_path, { :class=>"signup_link" } %>
