--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -8,9 +8,13 @@
     <li><%= link_to article.title, article %></li>
     <li><%= article.city %></li>
     <li><%= article.content %></li>
-    <%= link_to "Edit this Article", edit_article_path(article.id) %><br>
-	<%= link_to "Delete this Article v2", delete_article_path(article.id), method: :delete %><br>
-    <br>
-  <% end %>
+    <% if current_user %>
+	    <% if current_user.id == article.user_id %>
+		    <%= link_to "Edit this Article", edit_article_path(article) %><br>
+			<%= link_to "Delete this Article", delete_article_path(article), method: :delete, :data => {:confirm => "Are you sure you want to delete this date?"} %>
+		<% end %>
+	<% end %>
+<% end %>
+
 
  
