--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,4 +15,6 @@
   <%= form.submit "Sign Up!" %>
 <% end %>
 
-user details: 123 , 123@gmail.com
+<p>If you already have an account please <%= link_to "login", login_path %></p>
+
+
