--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
 
-<html>
-<head>
-	<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-</head>
 <body>
 	<h1 class="user_header"> User Profile</h1>
 	<div class="hello_there">
@@ -13,17 +8,15 @@
 
 		<%= @user.created_at %><br>
 	</div>
-
-	<div class="user_update_button">
-		<%= link_to "Update User Info", edit_user_path(@user), { :class=>"user_update_link" } %> 
-	</div>
-
-
-	<h1 class="articles_header">Articles</h1>
-
-	<div class="article_create_button">
-		<%= link_to "Create New Article", new_article_path, { :class=>"article_update_link" }  %>
-	</div>
+	 <% if current_user.id == @user.id %>
+		<div class="user_update_button">
+			<%= link_to "Update User Info", edit_user_path(@user), { :class=>"user_update_link" } %> 
+		</div>
+		<h1 class="articles_header">Articles</h1>
+		<div class="article_create_button">
+			<%= link_to "Create New Article", new_article_path, { :class=>"article_update_link" }  %>
+		</div>
+	<% end %>
 
 	<% @user.articles.each do |article| %>
 		<div class="articles">
@@ -31,8 +24,10 @@
 	    <li><%= article.title %></li>
 	    <li><%= article.city %></li>
 	    <li><%= article.content %></li>
-	    <%= link_to "Edit this Article", edit_article_path(article.id) %><br>
-		<%= link_to "Delete this Article", delete_article_path(article.id), method: :delete %><br>
+		    <% if current_user.id == article.user_id %>
+			    <%= link_to "Edit this Article", edit_article_path(article.id)%><br>
+				<%= link_to "Delete this Article", delete_article_path(article.id), method: :delete, :data => {:confirm => "Are you sure you want to delete this date?"} %><br>
+		    <% end %>
 	    </div>
 	<% end %>
 </body>
