--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,19 +10,15 @@
 
 
 	<div class="moon_line"></div>
-	<a href="http://localhost:3000/cities/1">
-	  <div class="moon_tag">Moon</div>
-	</a>
+	<div class="moon_tag"><a class="moon_link" href="http://localhost:3000/cities/1">Moon</a></div>
 
 	<div class="mars_line"></div>
-	<a href="http://localhost:3000/cities/2">
-	  <div class="mars_tag">Mars</div>
-	</a>
+	<div class="mars_tag"><a class="mars_link" href="http://localhost:3000/cities/2">Mars</a></div>
 
-	<div class="brad_line"></div>
+	<!-- <div class="brad_line"></div>
 	<a href="http://localhost:3000/cities/3">
 	  <div class="brad_tag">Brad's Space Hotel of Love</div>
-	</a>
+	</a> -->
 
 </body>
 </html>
