--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,9 +1,3 @@
-.homepage_header {
-	color: red;
-	font-family: Lobster;
-	font-size: 40px;
-	margin-left: 3%;
-}
 
 /*MOON LINK*/
 
@@ -11,35 +5,39 @@
 	background-color: white;
 	width: 2px;
 	height: 150px;
-	margin-top: 5%;
+	margin-top: 10%;
 	margin-left: 41.5%;
 	position: absolute;
 }
 
 .moon_tag {
 	width: 90px;
+	margin-left: 36%;
+	margin-top: 105px;
+}
+
+.moon_link {
+	width: 90px;
+	font-family: Lobster;
+	margin-left: 36%;
+	margin-top: 20px;
 	color: white;
 	text-decoration: none;
 	font-family: Lobster;
 	font-size: 40px;
-	margin-left: 39%;
-	margin-top: 20px;
 }
 
-.moon_tag:hover {
+.moon_link:hover {
 	width: 90px;
 	color: white;
 	text-decoration: none;
 	font-family: Lobster;
 	font-size: 40px;
-	margin-left: 39%;
+	margin-left: 36%;
 	margin-top: 20px;
 	color: red;
 }
 
-.moon_link {
-	text-decoration: none;
-}
 
 /*MARS LINK*/
 
@@ -55,22 +53,25 @@
 
 .mars_tag {
 	width: 90px;
-	color: white;
-	text-decoration: none;
-	font-family: Lobster;
-	font-size: 40px;
 	margin-left: 44%;
 	margin-top: 25%;
+	position: absolute;
 }
 
-.mars_tag:hover {
+.mars_link {
+	width: 90px;
+	font-family: Lobster;
+	color: white;
+	text-decoration: none;
+	font-size: 40px;
+}
+
+.mars_link:hover {
 	width: 90px;
 	color: white;
 	text-decoration: none;
 	font-family: Lobster;
 	font-size: 40px;
-	margin-left: 44%;
-	margin-top: 25%;
 	color: red;
 }
 
@@ -81,10 +82,11 @@
 	background-color: white;
 	width: 2px;
 	height: 150px;
-	margin-top: -33%;
+	margin-top: -4%;
 	margin-left: 95%;
 	position: absolute;
 }
+
 
 .brad_tag {
 	width: 410px;
@@ -93,19 +95,27 @@
 	font-family: Lobster;
 	font-size: 40px;
 	margin-left: 70%;
-	margin-top: -37.6%;
+	margin-top: -8%;
 }
 
-.brad_tag:hover {
-	width: 410px;
+.brad_link {
+	width: 90px;
+	font-family: Lobster;
+	color: white;
+	text-decoration: none;
+	font-size: 40px;
+}
+
+.brad_link:hover {
+	width: 90px;
 	color: white;
 	text-decoration: none;
 	font-family: Lobster;
 	font-size: 40px;
-	margin-left: 70%;
-	margin-top: -37.6%;
 	color: red;
 }
+
+
 
 
 
