--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,19 +6,21 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
-	<h1 class="homepage_header">This is our Home page</h1><br>
-
-
+	
 	<div class="moon_line"></div>
-	<div class="moon_tag"><a class="moon_link" href="http://localhost:3000/cities/1">Moon</a></div>
+	<div class="moon_tag">
+		<a class="moon_link" href="http://localhost:3000/cities/1">Moon</a>
+	</div>
 
 	<div class="mars_line"></div>
-	<div class="mars_tag"><a class="mars_link" href="http://localhost:3000/cities/2">Mars</a></div>
+	<div class="mars_tag">
+		<a class="mars_link" href="http://localhost:3000/cities/2">Mars</a>
+	</div>
 
-	<!-- <div class="brad_line"></div>
-	<a href="http://localhost:3000/cities/3">
-	  <div class="brad_tag">Brad's Space Hotel of Love</div>
-	</a> -->
+	<div class="brad_line"></div>
+	<div class="brad_tag">
+		<a class="brad_link" href="http://localhost:3000/cities/3">Brad's Space Hotel of Love</a>
+	</div>
 
 </body>
 </html>
