redone article format

--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -6,16 +6,17 @@ body {
 	background-size: cover;
 }
 
+
 .user_header {
 	margin-left: 16%;
-	color: black;
+	color: white;
 	font-family: Lobster;
 }
 
 .hello_there {
 	padding: 1%;
 	font-size: 20px;
-	background-color: rgba(0,0,0,0.6);
+	background-color: rgba(255,255,255,0.4);
 	border-radius: 10px;
 	margin-top: 1%;
 	margin-bottom: 1%;
@@ -27,14 +28,14 @@ body {
 .articles_header {
 	margin-top: 4%;
 	margin-left: 18%;
-	color: black;
+	color: white;
 	font-family: Lobster;
 
 }
 
 .articles {
 	padding: 1%;
-	background-color: rgba(0,0,0,0.6);
+	background-color: rgba(255,255,255,0.4);
 	border-radius: 10px;
 	margin-top: 1%;
 	margin-bottom: 1%;
@@ -45,7 +46,7 @@ body {
 
 .articles2 {
 	padding: 1%;
-	background-color: rgba(0,0,0,0.6);
+	background-color: rgba(255,255,255,0.4);
 	border-radius: 10px;
 	margin-top: 1%;
 	margin-bottom: 1%;
@@ -59,7 +60,7 @@ body {
 	margin-bottom: 1%;
 	margin-left: 14.5%;
 	padding: 1%;
-	background-color: rgba(0,0,0,0.6);
+	background-color: rgba(255,255,255,0.4);
 	border-radius: 10px;
 	text-decoration: none;
 	color: white;
@@ -70,7 +71,7 @@ body {
 }
 
 .user_update_link {
-	color: black;
+	color: white;
 	text-decoration: none;
 	font-family: Lobster;
 }
@@ -86,7 +87,7 @@ body {
 	margin-bottom: 1%;
 	margin-left: 14.5%;
 	padding: 1%;
-	background-color: rgba(0,0,0,0.6);
+	background-color: rgba(255,255,255,0.4);
 	border-radius: 10px;
 	text-decoration: none;
 	color: white;
@@ -97,7 +98,7 @@ body {
 }
 
 .article_update_link {
-	color: black;
+	color: white;
 	text-decoration: none;
 	font-family: Lobster;
 }
