--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -3,7 +3,7 @@
 <img class="map2" src="">
 
 <% @cities.articles.each do |article| %>
-	<div class="articles2"
+	<div class="articles2">
     <li><%= link_to article.title, article %></li>
     <li><%= article.city %></li>
     <li><%= article.content %></li>
