--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -4,12 +4,10 @@
       	<%= link_to "Home", root_path, { :class=>"signup_link" } %>
       	<% if current_user %>
 
-      	    <%= link_to "Logout", sessions_path, {method: :delete}, { :class=>"signup_link" } %> 
-      	    <%= link_to "Profile", user_path(current_user) %> 
+      	    <%= link_to "Logout", sessions_path, method: :delete %> 
+      	    <%= link_to "Profile", user_path(current_user), { :class=>"signup_link" } %> 
       	<% else %>
       	    <%= link_to "Signup", new_user_path, { :class=>"signup_link" } %>
-
-      	    <span>               </span>
 
       	    <%= link_to "Login", login_path, { :class=>"login_link" } %>
 
