--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,12 +27,12 @@
 
 	<% @user.articles.each do |article| %>
 		<div class="articles">
-		<%= link_to article.title, article %>
-	    <li><%= article.title %></li>
-	    <li><%= article.city %></li>
-	    <li><%= article.content %></li>
-	    <%= link_to "Edit this Article", edit_article_path(article.id) %><br>
-		<%= link_to "Delete this Article", delete_article_path(article.id), method: :delete %><br>
+			<%= link_to article.title, article %>
+		    <li><%= article.title %></li>
+		    <li><%= article.city %></li>
+		    <li><%= article.content %></li>
+		    <%= link_to "Edit this Article", edit_article_path(article.id) %><br>
+			<%= link_to "Delete this Article", delete_article_path(article.id), method: :delete %>
 	    </div>
 	<% end %>
 </body>
