--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,6 @@
 .logout_link {
 	color: white;
 	font-size: 25px;
-	margin-left: 5%;
 	text-decoration: none;
 	font-family: Lobster;
 }
@@ -35,7 +34,6 @@
 .signup_link {
 	color: white;
 	font-size: 25px;
-	margin-left: 5%;
 	text-decoration: none;
 	font-family: Lobster;
 }
@@ -49,7 +47,6 @@
 .login_link {
 	color: white;
 	font-size: 25px;
-	margin-left: 5%;
 	text-decoration: none;
 	font-family: Lobster;
 }
@@ -59,3 +56,12 @@
 	text-decoration: none;
 	font-family: Lobster;
 }
+
+.hash {
+	color: transparent;
+}
+
+
+
+
+
