--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -6,7 +6,7 @@
 
     <%= form.text_field :city, placeholder: "City" %> <br>
 
-    <%= form.text_field :content, placeholder: "Say What!!" %> <br>
+    <%= form.text_area :content, placeholder: "Say What!!" %> <br>
 
     <%= form.text_field :street, placeholder: "Street Name" %> <br>
 
