--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -2,12 +2,18 @@
     <div>
       <ul class="nav navbar-nav navbar-left">
       	<%= link_to "Home", root_path, { :class=>"signup_link" } %>
+        <span class="hash"> - </span>
       	<% if current_user %>
 
       	    <%= link_to "Logout", sessions_path, method: :delete %> 
+
+            <span class="hash"> - </span>
+
       	    <%= link_to "Profile", user_path(current_user), { :class=>"signup_link" } %> 
       	<% else %>
       	    <%= link_to "Signup", new_user_path, { :class=>"signup_link" } %>
+
+            <span class="hash"> - </span>
 
       	    <%= link_to "Login", login_path, { :class=>"login_link" } %>
 
