--- a/app/assets/stylesheets/city.css.erb
+++ b/app/assets/stylesheets/city.css.erb
@@ -1,5 +1,5 @@
 body {
-	background: url('http://hdwallpapers.cat/wallpaper/solar_system_sci-fi_concept_space_craft_ufo_hd-wallpaper-598413.jpg') no-repeat center center fixed; 
+	background: url(<%= asset_path 'solar_system.jpg' %>) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
