--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,22 +2,22 @@
 	
 	<div class="moon_line"></div>
 	<div class="moon_tag">
-		<a class="moon_link" href="http://localhost:3000/cities/1">Moon</a>
+		<%= link_to "Moon", city_path(1), { :class=>"moon_link" } %>
 	</div>
 
 	<div class="mars_line"></div>
 	<div class="mars_tag">
-		<a class="mars_link" href="http://localhost:3000/cities/2">Mars</a>
+		<%= link_to "Mars", city_path(2), { :class=>"mars_link" } %>
 	</div>
 
 	<div class="brad_line"></div>
 	<div class="brad_tag">
-		<a class="brad_link" href="http://localhost:3000/cities/3">Brad's Space Hotel of Love</a>
+		<%= link_to "Brad's Space Hotel of Love", city_path(3), { :class=>"brad_link" } %>
 	</div>
 
 
 
-
+ 
 
 
 
