--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,9 +1,8 @@
 <H1>Cities Page</H1>
 
-<img class="map2" src="">
 
 <% @cities.articles.each do |article| %>
-	<div class="articles2">
+	<div class="articles">
     <li><%= link_to article.title, article %></li>
     <li><%= article.city %></li>
     <li><%= article.content %></li>
