--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -5,7 +5,7 @@
         <span class="hash"> - </span>
       	<% if current_user %>
 
-      	    <%= link_to "Logout", sessions_path, method: :delete %> 
+      	    <%= link_to "Logout", sessions_path, { method: :delete, class: "signup_link" } %> 
 
             <span class="hash"> - </span>
 
