--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -2,18 +2,11 @@
 
 <%= form_for @article do |form| %>
   
- 	<%= form.text_field :title, placeholder: "Title", class: "form-control" %><br>
+ 	<%= form.text_field :title, :required => true, placeholder: "Title", :maxlength => 200, class: "form-control" %><br>
 
-    <%= form.text_field :city, placeholder: "City" %> <br>
+	<%= select(:article, :city_id, [['Moon', 1], ['Mars', 2], ["Brad's Space Hotel of Love", 3]]) %><br>
 
-    <%= form.text_area :content, placeholder: "Say What!!" %> <br>
+    <%= form.text_area :content, :required => true, placeholder: "Any cool destinations on this planet?", size: "150x10" %> <br>
 
-    <%= form.text_field :street, placeholder: "Street Name" %> <br>
-
-    <%= form.text_field :state, placeholder: "State" %> <br>
-
-    <%= form.text_field :country, placeholder: "Country" %> <br>
-
-
-  <%= form.submit "Update Article!" %>
+  <%= form.submit "Update!" %>
 <% end %> 
