--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
 		<%= link_to article.title, article %>
 	    <li><%= article.title %></li>
 	    <li><%= article.city %></li>
-	    <li><%= article.content %></li>
+	    <li><%= h truncate(article.content, :length => 1000) %>....<%= link_to "Read More", article_path(article.id) %></li>
 		    <% if current_user.id == article.user_id %>
 			    <%= link_to "Edit this Article", edit_article_path(article.id)%><br>
 				<%= link_to "Delete this Article", delete_article_path(article.id), method: :delete, :data => {:confirm => "Are you sure you want to delete this date?"} %><br>
