making planet divs

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,21 +1,6 @@
-
+<div class="moon_div">
 	
-	<div class="moon_line"></div>
-	<div class="moon_tag">
-		<%= link_to "Moon", city_path(1), { :class=>"moon_link" } %>
-	</div>
-
-	<div class="mars_line"></div>
-	<div class="mars_tag">
-		<%= link_to "Mars", city_path(2), { :class=>"mars_link" } %>
-	</div>
-
-	<div class="brad_line"></div>
-	<div class="brad_tag">
-		<%= link_to "Brad's Space Hotel of Love", city_path(3), { :class=>"brad_link" } %>
-	</div>
-
-
+</div>
 
  
 
