got comments working

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -8,7 +8,7 @@
 
 	<%= select(:article, :city_id, [['Moon', 1], ['Mars', 2], ["Brad's Space Hotel of Love", 3]]) %><br>
 
-    <%= form.text_area :content, :required => true, placeholder: "Any cool destinations on this planet?", size: "150x10" %> <br>
+    <%= form.text_area :content, :required => true, placeholder: "Any cool destinations on this planet worth writing about?", size: "150x10" %> <br>
 
   <%= form.submit "Create!" %>
 <% end %> 
