--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,7 +6,7 @@
 
     <%= form.text_field :last_name, placeholder: "Last Name" %> <br>
 
-    <%= form.text_field :city, placeholder: "City of Residence" %> <br>
+    <%= form.text_field :city, placeholder: "Planet of Residence" %> <br>
   
     <%= form.email_field :email, placeholder: "Email Address" %> <br>
   
