--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 	
 	<div class="moon_line"></div>
 	<div class="moon_tag">
-		<%= link_to "Moon", city_path(1), { :class=>"moon_link" } %>
+		<%= link_to "The Moon", city_path(1), { :class=>"moon_link" } %>
 	</div>
 
 	<div class="mars_line"></div>
