--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
 
     <%= form.text_field :last_name, placeholder: "Last Name" %> <br>
 
-    <%= form.text_field :city, placeholder: "City of Residence" %> <br>
+    <%= form.text_field :city, placeholder: "Planet of Residence" %> <br>
   
     <%= form.email_field :email, placeholder: "Email Address" %> <br>
   
@@ -15,6 +15,6 @@
   <%= form.submit "Sign Up!" %>
 <% end %>
 
-<p>If you already have an account please <%= link_to "login", login_path %></p>
+<p>If you already have an account please <%= link_to "Login", login_path %></p>
 
 
