finished article pages now working on new article page

--- a/app/assets/stylesheets/show.css.erb
+++ b/app/assets/stylesheets/show.css.erb
@@ -66,15 +66,23 @@ body {
 
 /*ARTICLE FORMATTING*/
 
+li {
+	list-style: none;
+	padding: 5px;
+}
+
+
 .article_title_link {
 	text-decoration: none;
-	color: blue;
+	color: white;
 	font-size: 20px;
+	font-family: arial black; 
+	margin-left: ;
 }
 
 .article_title_link:hover {
 	text-decoration: none;
-	color: white;
+	color: red;
 }
 
 .article_location_link {
@@ -95,14 +103,26 @@ body {
 
 }
 
+.article_edit_button {
+	text-decoration: none;
+	font-size: 15px;
+	font-family: arial black;
+	color: white;
+}
+
+.article_edit_button:hover {
+	text-decoration: none;
+	color: red;
+}
+
 .read_more_link {
 	text-decoration: none;
-	color: blue;
+	color: white;
 }
 
 .read_more_link:hover {
 	text-decoration: none;
-	color: white;
+	color: red;
 }
 
 .articles {
@@ -142,6 +162,22 @@ body {
 	text-decoration: none;
 	font-family: Lobster;
 }
+
+
+/*CITIES FORMATTING*/
+
+.cities_header {
+	font-family: Lobster;
+	font-size: 50px;
+	text-align: center;
+	color: white;
+}
+
+
+
+
+
+
 
 
 
