--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,13 +29,18 @@
 
 	<% @user.articles.each do |article| %>
 		<div class="articles">
-		<%= link_to article.title, article, {:class=>"article_title_link" } %>	    
-	    <li>Location: <%= link_to City.find(article.city).name, city_path(City.find(article.city).id), {:class=>"article_location_link"} %></li>
-	    <li>Review: <%= h truncate(article.content, :length => 1000) %>....<%= link_to "Read More", article_path(article.id), {:class=>"read_more_link"} %></li>
+		<u><%= link_to article.title.capitalize, article, {:class=>"article_title_link" } %></u>
+		<br>
+		<br>    
+		
+	    <li><u>Location:</u> <%= link_to City.find(article.city).name, city_path(City.find(article.city).id), {:class=>"article_location_link"} %></li>
+
+	    <li><u>Review:</u> <%= h truncate(article.content, :length => 1000) %>....<%= link_to "(Read More)", article_path(article.id), {:class=>"read_more_link"} %></li>
+	    <hr>
 		    <% if current_user.id == article.user_id %>
-			    <%= link_to "Edit this Article", edit_article_path(article.id), { :class=>"glyphicon glyphicon-pencil" } %><br>
+			    <%= link_to " Edit this Article", edit_article_path(article.id), { :class=>"glyphicon glyphicon-pencil article_edit_button" } %><br>
 			    
-				<%= link_to "Delete this Article", delete_article_path(article.id), class: "glyphicon glyphicon-trash", method: :delete, :data => {:confirm => "Are you sure you want to delete this date?"} %><br>
+				<%= link_to "Delete this Article", delete_article_path(article.id), class: "glyphicon glyphicon-trash article_edit_button", method: :delete, :data => {:confirm => "Are you sure you want to delete this date?"} %>
 		    <% end %>
 	    </div>
 	<% end %>
