finished formatting....maybe

--- a/app/assets/stylesheets/show.css.erb
+++ b/app/assets/stylesheets/show.css.erb
@@ -8,11 +8,19 @@ body {
 
 /*USER FORMATTING*/
 
+.btn {
+	margin-left: -217%;
+}
+
 .random_picture {
 	height: 300px;
 	border-radius: 30px;
-	position: absolute;
 	margin-left: 8%;
+	padding: 1px;
+}
+
+.comment_text_area {
+	color: black;
 }
 
 .user_header {
@@ -23,12 +31,21 @@ body {
 	font-size: 45px;
 }
 
+.user_header2 {
+	width: 100%;
+	text-align: center;
+	padding-bottom: 3%;
+	color: white;
+	font-family: Lobster;
+	font-size: 45px;
+}
+
 .hello_there {
 	padding: 1%;
 	font-size: 20px;
 	background-color: rgba(255,255,255,0.4);
 	border-radius: 10px;
-	margin-top: 5%;
+	margin-top: -24%;
 	margin-bottom: 1%;
 	margin-left: 60%;
 	color: white;
@@ -132,6 +149,16 @@ li {
 	margin-top: 1%;
 	margin-bottom: 1%;
 	margin-left: 10%;
+	color: white;
+	width: 80%;
+}
+
+.articles2 {
+	padding: 1%;
+	background-color: rgba(255,255,255,0.4);
+	border-radius: 10px;
+	margin-bottom: 1%;
+	margin: 0 auto;
 	color: white;
 	width: 80%;
 }
