--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,13 +1,16 @@
-<br></h1> Edit Article Page </h1>
+<div class="article_create_header">
+	Edit This Article
+</div>
 
-<%= form_for @article do |form| %>
-  
- 	<%= form.text_field :title, :required => true, placeholder: "Title", :maxlength => 200, class: "form-control" %><br>
+<div class="article_input_form">
+	<%= form_for @article do |form| %>
+	  
+	 	<%= form.text_field :title, :required => true, placeholder: "Title", :maxlength => 200, class: "form-control title_input_field" %><br>
 
-	<%= select(:article, :city_id, [['Moon', 1], ['Mars', 2], ["Brad's Space Hotel of Love", 3]]) %><br>
+		<%= select(:article, :city_id, [['Moon', 1], ['Mars', 2], ["Brad's Space Hotel of Love", 3]]) %><br>
 
-    <%= form.text_area :content, :required => true, placeholder: "Any cool destinations on this planet worth writing about?", size: "150x10" %> <br>
-
-  <%= form.submit "Update!" %>
-
-<% end %> 
+	    <%= form.text_area :content, :required => true, placeholder: "Any cool destinations on this planet?", size: "100x10", class: "input_field" %> <br>
+	    <br>
+  		<%= form.submit "Update!", :class => 'submit_button' %>
+	<% end %> 
+</div>
