--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,34 +1,42 @@
-<h1>Specific Article Page</h1>
+<div class="user_header2">
+  Specific Article Page
+</div>
 
-City: <%= @city %><br>
+<div class="articles2">
+  <u>City:</u> <%= @city %><br>
 
-Title: <%= @article.title %><br>
+  <u>Title:</u> <%= @article.title %><br>
 
-Details: <%= @article.content %><br>
-Creaters Name: <%= @author %><br>
+  <u>Details:</u> <%= @article.content %><br>
+  <u>Creaters Name:</u> <%= @author %><br>
 
-	<%= link_to "Edit this Article", edit_article_path(@article) %><br>
+  <br>
 
-	<%= link_to "Delete this Article", delete_article_path(@article), method: :delete, :data => {:confirm => "Are you sure you want to keep this cool interstellar destination a secret?"} %><br>
+  	<%= link_to "Edit this Article", edit_article_path(@article) %><br>
 
+  	<%= link_to "Delete this Article", delete_article_path(@article), method: :delete, :data => {:confirm => "Are you sure you want to keep this cool interstellar destination a secret?"} %><br>
 
+  <hr>
 
-   <h3>Comments</h3>
+     <h3>Comments</h3>
 
-        <%= form_for [@article, Comment.new] do |f| %>
+          <%= form_for [@article, Comment.new] do |f| %>
 
-            <%= f.text_area :content, :rows => 3, :cols => 58 %>
-            <br>
-            <div class='row'>
-              <div class='col-md-4 col-md-offset-8'>
-                <%= f.submit "Add comment", class: 'btn btn-primary' %>
+              <%= f.text_area :content, :rows => 3, :cols => 58, :class => "comment_text_area" %>
+              <br>
+              <div class='row'>
+                <div class='col-md-4 col-md-offset-8'>
+                  <%= f.submit "Add comment", class: 'btn btn-primary' %>
+                </div>
               </div>
-            </div>
 
-        <% end %><br>
+          <% end %><br>
 
- 		<% @comments.each do |comment| %>
-          <p>
-            <%= comment.content %> - <%= time_ago_in_words comment.created_at %> ago by <strong><%= User.find(comment.user_id).email %></strong>
-          </p>
-        <% end %>
+   		<% @comments.each do |comment| %>
+            <p>
+              <%= comment.content %> - <%= time_ago_in_words comment.created_at %> ago by <strong><%= User.find(comment.user_id).email %></strong>
+            </p>
+          <% end %>
+</div>
+
+
