got friendly id working

--- a/app/assets/stylesheets/show.css.erb
+++ b/app/assets/stylesheets/show.css.erb
@@ -7,7 +7,11 @@ body {
 }
 
 /*USER FORMATTING*/
-
+.header {
+	text-align: center;
+	color: white;
+	font-family: Lobster;
+}
 .random_picture {
 	height: 300px;
 	border-radius: 30px;
