--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<h1 class="header"> Put your space suit on and bring a change of underwear becasue you're about to </h1>
+
 <div class="moon_link">
 	<%= link_to image_tag("http://orig11.deviantart.net/bbfb/f/2010/237/1/a/full_moon_by_avmorgan.png", size: "200x200"), city_path(1) %>
 </div>
