got picture uploads working three beer deep/git add .git add .

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,6 +11,8 @@
     <%= form.email_field :email, placeholder: "Email Address" %> <br>
   
     <%= form.password_field :password, placeholder: "Password" %> <br>
+    
+    <%= form.file_field :avatar, class: "form-control" %>
 
   <%= form.submit "Save changes" %>
 <% end %>
