--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,6 +12,10 @@
   
     <%= form.password_field :password, placeholder: "Password" %> <br>
 
+
+    <%= form.file_field :avatar, class: "form-control" %>
+
+
   <%= form.submit "Sign Up!" %>
 <% end %>
 
