--- a/app/assets/stylesheets/show.css.erb
+++ b/app/assets/stylesheets/show.css.erb
@@ -163,6 +163,31 @@ li {
 	width: 80%;
 }
 
+.login_button_2 {
+	margin-top: 3%;
+	margin-left: 33%;
+	color: black;
+	font-family: Lobster;
+}
+
+.login_text {
+	font-size: 20px;
+	font-family: Lobster;
+	margin-top: 8%;
+	margin-left: 20%;
+}
+
+.articles3 {
+	font-size: 30px;
+	padding: 1%;
+	background-color: rgba(255,255,255,0.4);
+	border-radius: 10px;
+	margin-bottom: 1%;
+	margin: 0 auto;
+	color: black;
+	width: 26%;
+}
+
 .article_create_button {
 	margin-top: 1%;
 	margin-bottom: 1%;
