--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -3,14 +3,14 @@
 	Write A New Article
 </div>
 
-<div class="article_input_form">
+<div class="article_input_form2">
 	<%= form_for @article do |form| %>
 	  
 	 	<%= form.text_field :title, :required => true, placeholder: "Title", :maxlength => 200, class: "form-control title_input_field" %><br>
 
-		<%= select(:article, :city_id, [['Moon', 1], ['Mars', 2], ["Brad's Space Hotel of Love", 3]]) %><br>
+		<%= select(:article, :city_id, [['Moon', 1], ['Mars', 2], ["Brad's Space Hotel of Love", 3]], {}, {:class => 'dropdown_menu'}) %><br>
 
-	    <%= form.text_area :content, :required => true, placeholder: "Any cool destinations on this planet?", size: "100x10", class: "input_field" %> <br>
+	    <%= form.text_area :content, :required => true, placeholder: "Any cool destinations on this planet?", size: "100x10", class: "input_field2" %> <br>
 	    <br>
   		<%= form.submit "Create!", :class => 'submit_button' %>
 	<% end %> 
