--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Vagabond</title>
-  <link rel="shortcut icon" href="http://www.cliparthut.com/clip-arts/79/tangled-sun-symbol-79570.png">
+  <link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/elite-medical-science/512/space-shuttle-512.png">
   <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
