--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,6 @@
 
 <div class="moon_tag">Visit The Moon!</div>
 
-
 <div class="mars_link">
 	<%= link_to image_tag("https://lh3.ggpht.com/b9zxwGMelrN9YX1AFei-oNFMmRThay2yhmmXLMuopAujv2fqCldS2RfYcg3kHx-OeLeV=w170", size: "300x300"), city_path(2) %>
 </div>
@@ -17,4 +16,6 @@
 	<%= link_to image_tag("https://upload.wikimedia.org/wikipedia/commons/8/87/Transhab-cutaway.jpg", size: "300x400"), city_path(3) %>
 </div>
 
-<div class="brad_tag">Visit Brad's Inflatable Space Hotel of Love!</div>
+<div class="brad_tag">Visit Brad's Inflatable Space Hotel of <span class="love">Love ♥</span></div>
+
+
