--- a/app/assets/stylesheets/edit.css
+++ b/app/assets/stylesheets/edit.css
@@ -11,10 +11,10 @@
 	margin: 0 auto;
 }
 
-.title_input_field {
-	border-radius: 10px;
-	width: 40%;
-	margin: 0 auto;
+.title_input_field2 {
+	border-radius: 5px;
+	width: 99%;
+	margin-top: 2%;
 }
 
 .input_field {
@@ -22,9 +22,22 @@
 }
 
 
-.submit_button {
+.submit_button2 {
+	width: 60%;
 	font-size: 30px;
 	font-family: Lobster;
-	margin-left: 43%;
 	border-radius: 10px;
+	margin-top: 4%;
+	margin-left: 20%;
+}
+
+.articles4 {
+	font-size: 30px;
+	padding: 1%;
+	background-color: rgba(255,255,255,0.4);
+	border-radius: 10px;
+	margin-bottom: 1%;
+	margin: 0 auto;
+	color: black;
+	width: 24%;
 }
