changed wording on homepage

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,7 +16,7 @@
 	  
 	    <%= form.password_field :password, placeholder: "Password", class: "form-control title_input_field2" %>
 
-   		<%= form.file_field :avatar, class: "form-control" %>
+   		<%= form.file_field :avatar, class: "form-control title_input_field2" %>
 
 	  <%= form.submit "Save changes", :class => 'submit_button2' %>
 	<% end %>
