--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -6,6 +6,108 @@
 	<%= link_to "Write a new article about #{@cities.name}", new_article_path, { :class=>"article_update_link" }  %>
 </div>
 
+
+<% if @cities.id == 1 %>
+
+		<style>
+		      html, body {
+		        height: 100%;
+		        margin: 0;
+		        padding: 0;
+		      }
+		      #map {
+		        height: 50%;
+		        width: 50%;
+		        margin: auto;
+		      }
+		    </style>
+		  </head>
+		  <body>
+		    <div id="map"></div>
+		    <script>
+
+		function initMap() {
+		  var map = new google.maps.Map(document.getElementById('map'), {
+		    center: {lat: 0, lng: 0},
+		    zoom: 1,
+		    streetViewControl: false,
+		    mapTypeControlOptions: {
+		      mapTypeIds: ['moon']
+		    }
+		  });
+
+
+		  var marker = new google.maps.Marker({
+		    position: {lat: -25.363, lng: 131.044},
+		    map: map,
+		    title: 'Apollo 11 Landing Site'
+		  });
+		}
+
+
+
+
+
+		  var moonMapType = new google.maps.ImageMapType({
+		    getTileUrl: function(coord, zoom) {
+		        var normalizedCoord = getNormalizedCoord(coord, zoom);
+		        if (!normalizedCoord) {
+		          return null;
+		        }
+		        var bound = Math.pow(2, zoom);
+		        return '//mw1.google.com/mw-planetary/lunar/lunarmaps_v1/clem_bw' +
+		            '/' + zoom + '/' + normalizedCoord.x + '/' +
+		            (bound - normalizedCoord.y - 1) + '.jpg';
+		    },
+		    tileSize: new google.maps.Size(256, 256),
+		    maxZoom: 9,
+		    minZoom: 0,
+		    radius: 1738000,
+		    name: 'Moon'
+		  });
+
+		  map.mapTypes.set('moon', moonMapType);
+		  map.setMapTypeId('moon');
+		}
+
+		// Normalizes the coords that tiles repeat across the x axis (horizontally)
+		// like the standard Google map tiles.
+		function getNormalizedCoord(coord, zoom) {
+		  var y = coord.y;
+		  var x = coord.x;
+
+		  // tile range in one direction range is dependent on zoom level
+		  // 0 = 1 tile, 1 = 2 tiles, 2 = 4 tiles, 3 = 8 tiles, etc
+		  var tileRange = 1 << zoom;
+
+		  // don't repeat across y-axis (vertically)
+		  if (y < 0 || y >= tileRange) {
+		    return null;
+		  }
+
+		  // repeat across x-axis
+		  if (x < 0 || x >= tileRange) {
+		    x = (x % tileRange + tileRange) % tileRange;
+		  }
+
+		  return {x: x, y: y};
+		}
+
+		    </script>
+		    <script async defer
+		        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOSuaXApTTuYOIzkSBL5E6aFs36vxEpMY&signed_in=true&callback=initMap"></script>
+
+
+
+<% end %>
+
+
+
+
+
+
+
+
 <% @cities.articles.first(10).reverse_each do |article| %>
 	<div class="articles">
 	    <u><%= link_to article.title.capitalize, article, {:class=>"article_title_link" } %></u>
