--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -1,3 +1,39 @@
+.title_input_field2 {
+	border-radius: 5px;
+	width: 99%;
+	margin-top: 2%;
+}
+
+
+.insta_tag {
+	margin-left: 45%;
+	margin-top: 18%;
+	width: 9%;
+	position: absolute;
+}
+
+.insta_tag2 {
+	margin-left: 45%;
+	margin-top: 30%;
+	width: 9%;
+	position: absolute;
+}
+
+.signup_button {
+	margin-top: 3%;
+	margin-left: 31%;
+	color: black;
+	font-family: Lobster;
+}
+
+.signup_text2 {
+	text-align: center;
+	font-size: 24px;
+	font-family: Lobster;
+	margin-top: 8%;
+	margin-left: 5%;
+}
+
 .article_create_header {
 	font-family: Lobster;
 	font-size: 50px;
@@ -17,6 +53,17 @@
 	border-radius: 10px;
 	background-color: rgba(255,255,255,0.4);
 	padding: 1%;
+}
+
+.login_box {
+	font-size: 30px;
+	padding: 1%;
+	background-color: rgba(255,255,255,0.4);
+	border-radius: 10px;
+	margin-bottom: 1%;
+	margin: 0 auto;
+	color: black;
+	width: 26%;
 }
 
 .title_input_field {
